--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,11 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
     //volley
     implementation 'com.android.volley:volley:1.1.1'
-
+//
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //
+    implementation 'com.github.bumptech.glide:glide:3.5.2'
+
 
 }
