--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+
+
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
@@ -55,12 +57,21 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".controller.notification.ForegroundService"
-            android:enabled="true"
-            android:exported="true"></service>
+<!--        <service-->
+<!--            android:name=".controller.notification.ForegroundService"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="true"></service>-->
 
-        <receiver android:name = ".controller.notification.MyNotificationPublisher" />
+<!--        <receiver android:name = ".controller.notification.MyNotificationPublisher" />-->
+
+
+        <service
+            android:name=".controller.notification.FireBaseService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
