--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,9 @@ dependencies {
 //
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+//    implementation 'dev.dworks.libs:volleyplus:+'
     //
+    implementation 'com.koushikdutta.ion:ion:2.1.9'
 
 
 }
